--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hi stranger?</title>
-  <link rel="stylesheet" href="evua.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <button id="musicBtn">⏸ Musik</button>
@@ -15,6 +15,6 @@
 
   <audio id="bgm" src="bgm/evua.mp3" autoplay loop></audio>
 
-  <script src="evua.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
