--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="musicBtn">⏸ Musik</button>
+    <button id="musicBtn">▌▌ Musik</button>
   <div class="container">
     <div id="text"></div>
     <button id="nextBtn">Next ➤</button>
